[package]
name = "android"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"
jni-sys = "0.3.0"

[build-dependencies]
rust_swig = { path = "../macroslib" }
env_logger = "0.6"