[package]
name = "flapigen-android-example"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2021"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = { version = "0.13.1", default-features = false }
jni-sys = "0.3.0"

[build-dependencies]
flapigen = { path = "../macroslib" }
env_logger = { version = "0.11.3", default-features = false }