[package]
name = "flapigen-android-tests"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"

[build-dependencies]
flapigen = { path = "../macroslib" }
bindgen = "0.54.0"
walkdir = "2.2.7"
