[package]
name = "flapigen-android-tests"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.10"

[build-dependencies]
flapigen = { path = "../macroslib" }
bindgen = { version = "0.57.0", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }
walkdir = "2.2.7"
cc = "1.0.67"