[package]
name = "flapigen-android-tests"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2021"

[lib]
name = "mobcore"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = { version = "0.13.1", default-features = false }

[build-dependencies]
flapigen = { path = "../macroslib" }
bindgen = { version = "0.69.4", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }
walkdir = "2.3.2"
cc = "1.0.67"