[package]
name = "rust_swig_test_cpp"
version = "0.0.1"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"

[lib]
name = "rust_swig_test"
crate-type = ["staticlib"]

[build-dependencies]
env_logger = "0.5"
log = "0.4"
rust_swig = { path = "../macroslib" }

[features]
default = ["cpp17"]
cpp17 = []
boost = []