[package]
name = "rust_swig_test_cpp"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "rust_swig_test"
crate-type = ["staticlib"]

[build-dependencies]
env_logger = "0.6"
log = "0.4.6"
rust_swig = { path = "../macroslib" }

[features]
default = ["cpp17"]
cpp17 = []
boost = []
