[package]
name = "flapigen_test_cpp"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "flapigen_test"
crate-type = ["staticlib"]

[build-dependencies]
env_logger = "0.9.0"
log = "0.4.6"
flapigen = { path = "../macroslib" }

[features]
default = ["cpp17"]
cpp17 = []
boost = []
cpp17_optional = []
cpp17_variant = []
cpp17_string_view = []