[package]
name = "flapigen_test_cpp"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2021"

[lib]
name = "flapigen_test"
crate-type = ["staticlib"]

[build-dependencies]
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.6"
flapigen = { path = "../macroslib" }

[features]
default = ["cpp17"]
cpp17 = []
boost = []
cpp17_optional = []
cpp17_variant = []
cpp17_string_view = []