[package]
name = "flapigen_test_dotnet_native"
version = "0.1.0"
authors = ["Adam Rzepka <adam@simteract.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "flapigen_test_dotnet_native"
crate-type = ["cdylib"]

[build-dependencies]
flapigen = { path = "../macroslib" }
env_logger = "0.7"
log = "0.4"
