[package]
name = "rust_swig_test_jni"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "rust_swig_test_jni"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
chrono = "0.4.6"
env_logger = "0.7"

[build-dependencies]
env_logger = "0.7"
log = "0.4.6"
rust_swig = { path = "../macroslib" }
bindgen = "0.52.0"
