[package]
name = "flapigen_test_jni"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2018"

[lib]
name = "flapigen_test_jni"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
chrono = "0.4.6"
env_logger = "0.9.0"

[build-dependencies]
env_logger = "0.9.0"
log = "0.4.6"
flapigen = { path = "../macroslib" }
bindgen = { version = "0.59.2", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }
