[package]
name = "flapigen_test_jni"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
build = "build.rs"
edition = "2021"

[lib]
name = "flapigen_test_jni"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
chrono = "0.4.6"
env_logger = { version = "0.11.3", default-features = false }

[build-dependencies]
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.6"
flapigen = { path = "../macroslib" }
bindgen = { version = "0.69.4", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }
