[package]
name = "rust_swig"
version = "0.5.0-pre"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
description = "Tool for connecting libraries written in Rust with other languages"
license = "BSD-3-Clause"
keywords = ["swig", "java", "jni", "ffi", "cxx"]
repository = "https://github.com/Dushistov/rust_swig"
documentation = "https://docs.rs/rust_swig"
readme = "../README.md"
edition = "2018"

[dependencies]
syn = { version = "0.15.33", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "0.6.12"
proc-macro2 = { version = "0.4.28", features = ["span-locations"] }
log = "0.4.6"
petgraph = "0.5.0"
bitflags = "1.0.4"
lazy_static = "1.0.2"
smallvec = "1.1.0"
rustc-hash = "1.0.1"
smol_str = "0.1.15"
strum = { version = "0.16.0", features = ["derive"] }
heck = "0.3.1"
which = ">=1.0, <3.0"

[dev-dependencies]
env_logger = "0.7.1"
pulldown-cmark = "0.6.1"
tempfile = "3.0"
jni-sys = "0.3.0"

[build-dependencies]
syn = { version = "0.15.23", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "0.6.11"

[badges]
azure-devops = { project = "Dushistov/rust_swig", pipeline = "Dushistov.rust_swig" }
