[package]
name = "flapigen"
version = "0.6.0-pre8"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
description = "Tool for connecting libraries written in Rust with other languages"
license = "BSD-3-Clause"
keywords = ["swig", "java", "jni", "ffi", "cxx"]
repository = "https://github.com/Dushistov/flapigen-rs"
documentation = "https://docs.rs/flapigen"
readme = "../README.md"
edition = "2018"

[dependencies]
syn = { version = "1.0.12", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
log = "0.4.6"
petgraph = "0.5.0"
bitflags = "1.0.4"
lazy_static = "1.0.2"
smallvec = "1.1.0"
rustc-hash = "1.0.1"
smol_str = "0.1.15"
strum = { version = "0.18.0", features = ["derive"] }
heck = "0.3.1"
which = { version = "3.0", default-features = false }
itertools = "0.9"

[dev-dependencies]
env_logger = "0.7.1"
pulldown-cmark = "0.7.0"
tempfile = "3.0"
jni-sys = "0.3.0"

[build-dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0"
