[package]
name = "flapigen"
version = "0.8.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
description = "Tool for connecting libraries written in Rust with other languages"
license = "BSD-3-Clause"
keywords = ["swig", "java", "jni", "ffi", "cxx"]
repository = "https://github.com/Dushistov/flapigen-rs"
documentation = "https://docs.rs/flapigen"
readme = "../README.md"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
syn = { version = "2.0.87", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0.37"
proc-macro2 = { version = "1.0.83", features = ["span-locations"] }
log = "0.4.6"
petgraph = { version = "0.6.0", default-features = false }
bitflags = "2.5.0"
smallvec = "1.1.0"
rustc-hash = "1.0.1"
smol_str = "0.3.2"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
heck = { version = "0.5.0", default-features = false }
which = { version = "4.2.4", default-features = false }

[dev-dependencies]
env_logger = { version = "0.11.3", default-features = false }
pulldown-cmark = "0.9.1"
tempfile = "3.0"
jni-sys = "0.3.0"

[build-dependencies]
rustc-hash = "1.0.1"
syn = { version = "2.0.87", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0"
