[package]
name = "flapigen_test_python"
version = "0.1.0"
authors = ["Adam Rzepka <adam@simteract.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "flapigen_test_python"
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.7.0", features = ["extension-module"] }

[build-dependencies]
env_logger = "0.9.0"
log = "0.4.6"
flapigen = { path = "../macroslib" }
