[package]
name = "cpp-example-rust-part"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2021"
build = "build.rs"

# ANCHOR: cargo_lib_section
[lib]
name = "cpp_example_rust_part"
crate-type = ["cdylib"]
# ANCHOR_END: cargo_lib_section

[dependencies]

# ANCHOR: cargo_build_deps
[build-dependencies]
flapigen = { path = "../../macroslib" }
# ANCHOR_END: cargo_build_deps

